# mypaste-cli

./: README.md  pyproject.toml
.github/workflows/: test.yml
src/mypaste/: api.py  cli.py  keymgr.py  logger.py
tests/: memorykeyring.py  requestsmocks.py  test_api.py  test_cli.py  test_keymgr.py
